--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
 before_deploy:
   - go get github.com/mitchellh/gox
   - gox -build-toolchain
-  - GOPATH=_vendor:$GOPATH gox -output 'dist/{{.Dir}}_{{.OS}}_{{.Arch}}/{{.Dir}}'
+  - GOPATH=$HOME/gopath/src/github.com/akiomik/relevel/_vendor:$GOPATH gox -os "darwin windows linux openbsd freebsd" -output 'dist/{{.Dir}}_{{.OS}}_{{.Arch}}/{{.Dir}}'
   - cd dist; find . -name '*_*' -exec zip -r {}.zip {} \\;
 deploy:
   provider: releases
