--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,10 @@ install:
 script:
   - $HOME/gopath/bin/gom install
   - $HOME/gopath/bin/gom test
-  - GOOS=darwin GOARCH=amd64 go build
-  - GOPATH=$HOME/gopath/src/github.com/akiomik/relevel/_vendor GOOS=darwin GOARCH=amd64 go build
 before_deploy:
   - go get github.com/mitchellh/gox
   - gox -build-toolchain
-  - GOPATH=$HOME/gopath/src/github.com/akiomik/relevel/_vendor:$GOPATH gox -os "darwin windows linux openbsd freebsd" -output 'dist/{{.Dir}}_{{.OS}}_{{.Arch}}/{{.Dir}}'
+  - GOPATH=$HOME/gopath/src/github.com/akiomik/relevel/_vendor gox -os "darwin windows linux openbsd freebsd" -output 'dist/{{.Dir}}_{{.OS}}_{{.Arch}}/{{.Dir}}'
   - cd dist; find . -name '*_*' -exec zip -r {}.zip {} \\;
 deploy:
   provider: releases
